Restructure project into sub-projects for proper modular encapsulation and testing. Remove dependency on BootStrap, tests just make the classloaders themselves. Cleanup buildscripts Update gradle to 8.4 Moved to Github Actions